<resources>
    <string name="app_name">InstiApp</string>
    <string name="insta">Insta</string>
    <string name="from">From</string>
    <string name="angad">Angad Gupta</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_account">Already have an Account Login ?</string>
</resources>